oj_backend/errors/9aea29b3-750a-479d-bd5c-6a0a913ab32f.txt
  File "/Users/amritanand/Desktop/myWork/frontend/CoderHub/oj_backend/codes/9aea29b3-750a-479d-bd5c-6a0a913ab32f.python", line 1
    print('Hello, world!'
         ^
SyntaxError: '(' was never closed
